--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,31 +60,29 @@ header nav ul a {
 /*Bio begins*/
 .bio-segment {
     display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    width: 100%;
-    height: auto;
-    margin: 0;
+    margin-bottom: 60px;
 }
 .bio-segment p {
     text-align: center;
     font-size: 25px;
 }
 .bio-segment img {
-    max-width: 15vw;
+    width: 360px;
+    height: 472px;
+    margin-right: 25px;
+    border: 10px solid var(--primary-color);
+
 }
-.bio-title {
+.title {
     font-size: 48px;
-    text-align: left;
     padding: 40px;
-    margin: 0 40px 40px 0;
     border-right: 2px dotted var(--primary-color);
 }
-.primary-border {
+/* .primary-border {
     padding-right: 5px;
-}
+} */
 .bio-text {
-    display: flex;
+    margin: 0 10px;
 }
 /*Bio ends*/
 
@@ -101,20 +99,13 @@ header nav ul a {
     flex-wrap: wrap;
     margin: 0 auto;
 }
-.work-title {
-    font-size: 48px;
-    text-align: left;
-    padding: 40px;
-    margin-left: 65px;
-    border-right: 2px dotted var(--primary-color);
-    height: auto;
-}
 .card {
     display: inline-block;
     margin: 10px;
 }
 .card img {
-    max-width: 30vw;
+    width: 380px;
+    height: 248px;
     border: 10px solid var(--primary-color);
 }
 .first-card {
@@ -122,8 +113,8 @@ header nav ul a {
     margin: 10px;
 }
 .first-card img {
-    max-width: 70vw;
-    height: auto;
+    width: 820px;
+    height: 400px;
     border: 10px solid var(--primary-color);
 
 }
@@ -131,6 +122,7 @@ header nav ul a {
     text-align: center;
     color: var(--secondary-color);
     background-color: var(--primary-color);
+    height: 22px;
 }
 /*Work style ends*/
 
@@ -157,15 +149,40 @@ footer a {
 }
 /*Footer style ends*/
 
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS
-@media screen and (max-width: 980px) {
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS */
+@media screen and (max-width: 1024px) {
+    .first-card img {
+        width: 755px;
+    }
+  }
 
-  } */
-
-  /* MEDIA QUERY FOR TABLETS
+  /* MEDIA QUERY FOR TABLETS */
   @media screen and (max-width: 768px) {
-
-  } */
+    .first-card img {
+        width: 524px;
+        height: 306px;
+    }
+    .bio-segment img {
+        width: 300px;
+        height: 388px;
+    }
+    .bio-segment {
+        flex-direction: column;
+    }
+    .work-segment {
+        flex-direction: column;
+    }
+    /* .bio-segment {
+        justify-content: center;
+    } */
+    .title {
+        border-bottom: 2px dotted var(--primary-color);
+        border-right: none;
+    }
+    .bio-text {
+        margin: 10px 0;
+    }
+  }
   
   /* MEDIA QUERY FOR MOBILE PHONES/Devices
   @media screen and (max-width: 575px) {
