--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ header {
 header h1 {
     font-size: 60px;
     font-weight: bold;
+    margin: 10px;
 }
 header a {
     color: var(--secondary-color);
@@ -38,7 +39,16 @@ header nav ul {
 header nav ul a {
     padding: 20px;
     font-size: 40px;
+    margin: 20px;
 }
+header nav ul {
+    margin: 20px;
+}
+header nav ul li a:hover {
+    background: var(--secondary-color);
+    color: var(--primary-color);
+    border-radius: 15px;
+  }
 /*Header style ends*/
 
 /*Hero style begins*/
@@ -55,6 +65,12 @@ header nav ul a {
     width: 100vw;
     height: 20vw;
 }
+.hero h2 {
+    font: 80px bold;
+    color: var(--secondary-color);
+    text-decoration: underline;
+    margin: 30px;
+}
 /*Hero style ends*/
 
 /*Bio begins*/
@@ -64,23 +80,21 @@ header nav ul a {
 }
 .bio-segment p {
     text-align: center;
-    font-size: 25px;
+    font-size: 35px;
+    margin: 10px;
 }
 .bio-segment img {
     width: 360px;
     height: 472px;
     margin-right: 25px;
     border: 10px solid var(--primary-color);
-
+    border-radius: 15px;
 }
 .title {
     font-size: 48px;
     padding: 40px;
-    border-right: 2px dotted var(--primary-color);
+    border-right: 5px dotted var(--primary-color);
 }
-/* .primary-border {
-    padding-right: 5px;
-} */
 .bio-text {
     margin: 0 10px;
 }
@@ -107,6 +121,11 @@ header nav ul a {
     width: 380px;
     height: 248px;
     border: 10px solid var(--primary-color);
+    border-radius: 15px;
+    opacity: 0.7;
+}
+.card img:hover {
+    opacity: 1;
 }
 .first-card {
     display: inline-block;
@@ -116,13 +135,18 @@ header nav ul a {
     width: 820px;
     height: 400px;
     border: 10px solid var(--primary-color);
-
+    border-radius: 15px;
+    opacity: 0.7;
+}
+.first-card img:hover {
+    opacity: 1;
 }
 .work-cards h3 {
     text-align: center;
     color: var(--secondary-color);
     background-color: var(--primary-color);
     height: 22px;
+    border-radius: 10px;
 }
 /*Work style ends*/
 
@@ -139,6 +163,7 @@ footer {
 footer h2 {
     font-size: 45px;
     font-weight: bold;
+    margin: 10px;
 }
 footer address {
     padding: 10px;
@@ -149,42 +174,98 @@ footer a {
 }
 /*Footer style ends*/
 
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS */
-@media screen and (max-width: 1024px) {
+/* MEDIA QUERY FOR 4k/2560px DESKTOP SCREENS */
+@media screen and (min-width: 1410px) {
     .first-card img {
-        width: 755px;
+        width: 988px;
+        height: 453px;
+    }
+  }
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS */
+@media screen and (max-width: 1200px) {
+    .first-card img {
+        width: 710px;
+    }
+    .bio-segment p {
+        font-size: 30px;
     }
   }
 
   /* MEDIA QUERY FOR TABLETS */
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 960px) {
     .first-card img {
         width: 524px;
         height: 306px;
     }
     .bio-segment img {
-        width: 300px;
-        height: 388px;
+        width: 265px;
+        height: 338px;
     }
-    .bio-segment {
+    .bio-segment, .work-segment {
         flex-direction: column;
+        align-items: center;
     }
-    .work-segment {
-        flex-direction: column;
-    }
-    /* .bio-segment {
-        justify-content: center;
-    } */
+    
     .title {
-        border-bottom: 2px dotted var(--primary-color);
+        border-bottom: 5px dotted var(--primary-color);
         border-right: none;
     }
     .bio-text {
         margin: 10px 0;
     }
+    .hero h2 {
+        font-size: 60px;
+    }
+    header nav ul a {
+        margin: 30px;
+    }
   }
   
-  /* MEDIA QUERY FOR MOBILE PHONES/Devices
-  @media screen and (max-width: 575px) {
-
-  } */
+  /* MEDIA QUERY FOR MOBILE PHONES/Devices */
+  @media screen and (max-width: 550px) {
+    .first-card img {
+        width: 470px;
+        height: 268px;
+    }
+    .hero {
+        height: 40vw;
+    }
+    .work-cards h3 {
+        font-size: 20px;
+    }
+    footer h2 {
+        font-size: 30px;
+    }
+    footer address {
+        font-size: 20px;
+    }
+  }
+  /* MEDIA QUERY FOR Smaller MOBILE PHONES/Devices */
+  @media screen and (max-width: 480px) {
+    .first-card img {
+        width: 305px;
+        height: 200px;
+    }
+    .card img {
+        width: 260px;
+    }
+    .bio-segment p {
+        font-size: 20px;
+    }
+    .card h3 {
+        width: 260px;
+    }
+    .bio-segment img {
+        margin-right: 0;
+    }
+    header h1 {
+        font-size: 40px;
+    }
+    header nav ul a {
+        font-size: 30px;
+    }
+    .work-cards h3 {
+        font-size: 14px;
+    }
+  }
